--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
-streamlit
-pandas
-numpy
-plotly
-openpyxl
-xlrd
-kaleido
+streamlit==1.38.0
+pandas==2.2.3
+numpy==1.26.4
+plotly==5.24.1
+openpyxl==3.1.5
+xlrd==2.0.1
+kaleido==0.2.1
+
